# Arrowverse-Reorderer

./: .gitignore  ArrowverseReorder.py  README.md  __main__.py  arrowverse_reorderer.py  pyproject.toml  requirements.txt
arrowverse_reorderer/: __main__.py
