[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Arrowverse-Reorderer"
version = "2.0.0"
authors = [
  { name="Alberto Pasqualetto", email="39854348+albertopasqualetto@users.noreply.github.com" },
]
description = "Order Arrowverse episodes files in air time order"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
	"mnamer>=2.5.4",
	"requests>=2.27.1",
	"pandas>=1.4.3",
	"filetype>=1.0.13"
]
keywords = ["Arrowverse", "Arrow", "The Flash", "Rename", "Order"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Environment :: Console",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Topic :: Desktop Environment :: File Managers",
	"Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/albertopasqualetto/Arrowverse-Reorderer"
"Bug Tracker" = "https://github.com/albertopasqualetto/Arrowverse-Reorderer/issues"